Spacing fix

--- a/src/components/SocialBubble.css
+++ b/src/components/SocialBubble.css
@@ -5,7 +5,7 @@
 }
 
 .socialBubble{
-  margin-left: 5px;
+  margin-right: 5px;
   height: 50px;
   width: 50px;
   background-color: var(--clr-light);
